tests/ui/printdoc-binary.stderr
error: byte strings are not supported in formatting macros
 --> $DIR/tests/ui/printdoc-binary.rs:4:15
  |
4 |     printdoc!(b"");
  |               ^^^
