tests/ui/printdoc-binary.rs
#![feature(proc_macro_hygiene)]

use indoc::printdoc;

fn main() {
    printdoc!(b"");
}
